QPID-3960: Fix  performance regression in priority queue implementation.

Revision r1307582 created a serious degredation in priority queue performance.

It replaced a muti-deque implementation with o(1) complexity for consuming with
a map implementation with o(log(n)) performance.

This revision returns to a mutli-deque algorithm but with the addition
of a FIFO index for fast browsing of acquired and unacquired messages.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1329301 13f79535-47bb-0310-9956-ffa450edef68