cpp/src/qpid/broker/Fairshare.cpp
@@ -23,7 +23,6 @@
 #include "qpid/framing/FieldTable.h"
 #include "qpid/framing/FieldValue.h"
 #include "qpid/log/Statement.h"
-#include <algorithm>
 #include <boost/format.hpp>
 #include <boost/lexical_cast.hpp>
 #include <boost/assign/list_of.hpp>
@@ -33,12 +32,35 @@ namespace broker {
 
 Fairshare::Fairshare(size_t levels, uint limit) :
     PriorityQueue(levels),
-    limits(levels, limit), counts(levels, 0) {}
+    limits(levels, limit), priority(levels-1), count(0) {}
 
 
 void Fairshare::setLimit(size_t level, uint limit)
 {
     limits[level] = limit;
+}
+
+bool Fairshare::limitReached()
+{
+    uint l = limits[priority];
+    return l && ++count > l;
+}
+
+uint Fairshare::currentLevel()
+{
+    if (limitReached()) {
+        return nextLevel();
+    } else {
+        return priority;
+    }
+}
+
+uint Fairshare::nextLevel()
+{
+    count = 1;
+    if (priority) --priority;
+    else priority = levels-1;
+    return priority;
 }
 
 bool Fairshare::isNull()
@@ -47,57 +69,41 @@ bool Fairshare::isNull()
     return true;
 }
 
-bool Fairshare::getState(qpid::framing::FieldTable& state) const
+bool Fairshare::getState(uint& p, uint& c) const
 {
-    for (int i = 0; i < levels; i++) {
-        if (counts[i]) {
-            std::string key = (boost::format("fairshare-count-%1%") % i).str();
-            state.setInt(key, counts[i]);
-        }
-    }
+    p = priority;
+    c = count;
     return true;
 }
 
-bool Fairshare::checkLevel(uint level)
+bool Fairshare::setState(uint p, uint c)
 {
-    if (!limits[level] || counts[level] < limits[level]) {
-        counts[level]++;
-        return true;
-    } else {
-        return false;
-    }
+    priority = p;
+    count = c;
+    return true;
 }
 
-bool Fairshare::consume(QueuedMessage& message)
+bool Fairshare::findFrontLevel(uint& p, PriorityLevels& messages)
 {
-    for (Available::iterator i = available.begin(); i != available.end(); ++i) {
-        QueuedMessage* next = *i;
-        if (checkLevel(getPriorityLevel(*next))) {
-            messages[next->position].status = QueuedMessage::ACQUIRED;
-            message = *next;
-            available.erase(i);
-            return true;
-        }
-    }
-    if (!available.empty()) {
-        std::fill(counts.begin(), counts.end(), 0);//reset counts
-        return consume(message);
-    } else {
-        return false;
-    }
+    const uint start = p = currentLevel();
+    do {
+        if (!messages[p].empty()) return true;
+    } while ((p = nextLevel()) != start);
+    return false;
 }
 
 
-bool Fairshare::getState(const Messages& m, qpid::framing::FieldTable& counts)
+
+bool Fairshare::getState(const Messages& m, uint& priority, uint& count)
 {
     const Fairshare* fairshare = dynamic_cast<const Fairshare*>(&m);
-    return fairshare && fairshare->getState(counts);
+    return fairshare && fairshare->getState(priority, count);
 }
 
-bool Fairshare::setState(Messages& m, const qpid::framing::FieldTable& counts)
+bool Fairshare::setState(Messages& m, uint priority, uint count)
 {
     Fairshare* fairshare = dynamic_cast<Fairshare*>(&m);
-    return fairshare && fairshare->setState(counts);
+    return fairshare && fairshare->setState(priority, count);
 }
 
 int getIntegerSetting(const qpid::framing::FieldTable& settings, const std::vector<std::string>& keys)
@@ -130,14 +136,7 @@ int getIntegerSettingForKey(const qpid::framing::FieldTable& settings, const std
 {
     return getIntegerSetting(settings, boost::assign::list_of<std::string>(key));
 }
-bool Fairshare::setState(const qpid::framing::FieldTable& state)
-{
-    for (int i = 0; i < levels; i++) {
-        std::string key = (boost::format("fairshare-count-%1%") % i).str();
-        counts[i] = state.isSet(key) ? getIntegerSettingForKey(state, key) : 0;
-    }
-    return true;
-}
+
 int getSetting(const qpid::framing::FieldTable& settings, const std::vector<std::string>& keys, int minvalue, int maxvalue)
 {
     return std::max(minvalue,std::min(getIntegerSetting(settings, keys), maxvalue));
